get feature importance

--- a/logistic_top_10_feature.ipynb
+++ b/logistic_top_10_feature.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -224,53 +224,41 @@
    ],
    "source": [
     "df = pd.read_csv('Training Dataset/training datalist.csv')\n",
-    "display(df.head())"
+    "display(df.head())\n",
+    "df.reset_index(drop=True, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# data cleaning\n",
     "df['PPD'].fillna(0, inplace=True)\n",
     "df.dropna(subset=['Voice handicap index - 10'], inplace=True)\n",
-    "# df.info()\n",
-    "df.reset_index(drop=True, inplace=True)"
+    "# df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Sex', 'Age', 'Narrow pitch range', 'Decreased volume', 'Fatigue', 'Dryness', 'Lumping', 'heartburn', 'Choking', 'Eye dryness', 'PND', 'Smoking', 'PPD', 'Drinking', 'frequency', 'Noise at work', 'Occupational vocal demand', 'Voice handicap index - 10']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "columns_to_drop = ['ID', 'Disease category', 'Diabetes', 'Hypertension', 'CAD', 'Head and Neck Cancer', 'Head injury', 'CVA', 'Onset of dysphonia ', 'Diurnal pattern']\n",
-    "# get certain columns as features\n",
-    "features = df.columns.drop(columns_to_drop).to_list()\n",
-    "print(features)"
+    "top_10_features = ['Occupational vocal demand', 'Sex', 'Head and Neck Cancer', 'PPD', 'frequency', 'Onset of dysphonia ', 'Decreased volume', 'Narrow pitch range', 'Noise at work', 'Drinking']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "# X = df.drop(['ID', 'Disease category'], axis=1)\n",
-    "X = df[features]\n",
+    "X = df[top_10_features]\n",
     "y = df['Disease category']\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=101)\n",
@@ -282,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,100 +284,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2, 1, 2, 1, 1, 2, 3, 1, 4, 1, 2, 2, 1, 2, 3, 3, 2, 1, 3, 5, 1, 1,\n",
-       "       1, 3, 3, 1, 2, 1, 2, 2, 1, 1, 1, 1, 3, 1, 1, 1, 1, 1, 1, 1, 2, 3,\n",
-       "       3, 1, 1, 1, 3, 4, 3, 3, 2, 1, 3, 2, 1, 1, 2, 1, 2, 1, 1, 2, 3, 1,\n",
-       "       1, 1, 1, 2, 1, 2, 2, 1, 1, 3, 2, 3, 1, 1, 3, 2, 2, 2, 3, 3, 1, 1,\n",
-       "       1, 5, 2, 1, 5, 4, 1, 1, 1, 4, 1, 1, 1, 1, 1, 1, 1, 2, 1, 1, 1, 3,\n",
-       "       1, 2, 3, 3, 1, 2, 2, 5, 5, 1, 1, 3, 1, 3, 1, 3, 3, 1, 1, 3, 3, 1,\n",
-       "       3, 2, 1, 1, 3, 1, 1, 1, 1, 2, 2, 1, 1, 5, 1, 2, 1, 1, 2, 1, 1, 1,\n",
-       "       5, 1, 2, 1, 2, 1, 3, 3, 3, 1, 1, 1, 2, 1, 1, 2, 1, 2, 1, 3, 1, 3,\n",
-       "       1, 5, 1, 3, 1, 1, 3, 3, 4, 1, 2, 1, 2, 1, 1, 1, 2, 4, 4, 2, 1, 1,\n",
-       "       3, 2, 3, 1, 1, 1, 3, 1, 1, 2, 1, 4, 1, 1, 1, 1, 1, 3, 1, 1, 1, 1,\n",
-       "       1, 4, 1, 1, 3, 2, 5, 2, 1, 2, 1, 2, 3, 1, 1, 3, 2, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 2, 3, 3, 5, 3, 1, 2, 3, 3, 2, 2, 1, 1, 2, 1, 4, 2, 1, 2, 2,\n",
-       "       2, 3, 3, 3, 1, 1, 1, 2, 3, 1, 2, 2, 1, 2, 1, 1, 2, 1, 1, 3, 1, 4,\n",
-       "       1, 2, 5, 1, 1, 1, 3, 1, 3, 1, 3, 3])"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_test.values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2, 1, 1, 1, 1, 1, 2, 1, 4, 1, 1, 3, 1, 2, 3, 2, 2, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 2, 1, 2, 1, 1, 2, 1, 1, 1, 1, 2, 1, 2, 1, 1, 2, 1, 2, 2, 3,\n",
-       "       3, 1, 1, 1, 3, 2, 2, 3, 2, 1, 1, 3, 1, 1, 1, 1, 1, 3, 1, 1, 3, 1,\n",
-       "       1, 1, 1, 1, 1, 4, 1, 1, 1, 3, 2, 3, 1, 1, 3, 2, 2, 1, 3, 3, 1, 2,\n",
-       "       1, 1, 1, 1, 5, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2,\n",
-       "       1, 2, 3, 3, 1, 2, 1, 5, 1, 1, 1, 2, 4, 3, 1, 3, 3, 1, 5, 3, 3, 2,\n",
-       "       4, 1, 1, 1, 4, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 1, 1, 1, 4, 1, 1,\n",
-       "       5, 1, 3, 1, 1, 1, 2, 1, 1, 1, 1, 2, 2, 1, 1, 1, 3, 2, 1, 1, 3, 1,\n",
-       "       1, 1, 1, 3, 1, 1, 3, 3, 4, 1, 2, 1, 2, 1, 1, 1, 1, 1, 1, 2, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 2, 2, 1, 1, 1, 2, 1, 1, 1, 1, 1, 3, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 3, 2, 1, 2, 1, 2, 1, 1, 1, 5, 1, 2, 2, 2, 1, 1, 1, 1,\n",
-       "       2, 1, 1, 1, 3, 1, 4, 1, 2, 2, 1, 5, 1, 1, 1, 2, 2, 2, 1, 1, 1, 2,\n",
-       "       1, 1, 2, 1, 1, 1, 1, 1, 1, 3, 1, 1, 1, 2, 2, 1, 1, 1, 1, 2, 1, 1,\n",
-       "       1, 2, 5, 1, 1, 1, 3, 1, 2, 3, 4, 3])"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_pred"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.64\n",
-      "Precision: 0.64\n",
-      "Recall: 0.64\n",
-      "F1: 0.63\n",
+      "Accuracy: 0.58\n",
+      "Precision: 0.57\n",
+      "Recall: 0.58\n",
+      "F1: 0.53\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           1       0.69      0.87      0.77       153\n",
-      "           2       0.49      0.42      0.45        64\n",
-      "           3       0.76      0.44      0.56        59\n",
-      "           4       0.22      0.18      0.20        11\n",
-      "           5       0.57      0.36      0.44        11\n",
+      "           1       0.66      0.88      0.75       153\n",
+      "           2       0.39      0.44      0.41        64\n",
+      "           3       0.55      0.19      0.28        59\n",
+      "           4       0.00      0.00      0.00        11\n",
+      "           5       1.00      0.00      0.00        11\n",
       "\n",
-      "    accuracy                           0.64       298\n",
-      "   macro avg       0.55      0.46      0.49       298\n",
-      "weighted avg       0.64      0.64      0.63       298\n",
+      "    accuracy                           0.58       298\n",
+      "   macro avg       0.52      0.30      0.29       298\n",
+      "weighted avg       0.57      0.58      0.53       298\n",
       "\n",
-      "[[133  11   5   2   2]\n",
-      " [ 32  27   3   1   1]\n",
-      " [ 15  14  26   4   0]\n",
-      " [  6   3   0   2   0]\n",
-      " [  7   0   0   0   4]]\n"
+      "[[135  13   4   1   0]\n",
+      " [ 34  28   2   0   0]\n",
+      " [ 24  23  11   1   0]\n",
+      " [  6   3   2   0   0]\n",
+      " [  6   4   1   0   0]]\n"
      ]
     }
    ],
@@ -412,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -423,109 +345,127 @@
       "(2, 1)\n",
       "(2, 1)\n",
       "(3, 2)\n",
+      "(4, 3)\n",
       "(2, 1)\n",
-      "(2, 3)\n",
+      "(3, 2)\n",
       "(3, 2)\n",
       "(3, 1)\n",
       "(5, 1)\n",
       "(3, 1)\n",
-      "(3, 2)\n",
+      "(3, 1)\n",
       "(2, 1)\n",
       "(3, 2)\n",
       "(1, 2)\n",
       "(1, 2)\n",
-      "(1, 2)\n",
+      "(3, 2)\n",
+      "(3, 2)\n",
       "(4, 2)\n",
+      "(2, 1)\n",
+      "(3, 1)\n",
+      "(2, 1)\n",
+      "(2, 1)\n",
+      "(2, 1)\n",
+      "(3, 2)\n",
+      "(2, 1)\n",
+      "(2, 1)\n",
+      "(3, 1)\n",
+      "(3, 2)\n",
+      "(1, 3)\n",
+      "(1, 2)\n",
+      "(3, 2)\n",
+      "(2, 1)\n",
       "(3, 2)\n",
       "(3, 1)\n",
-      "(2, 3)\n",
+      "(1, 2)\n",
+      "(5, 2)\n",
       "(2, 1)\n",
-      "(2, 1)\n",
+      "(5, 2)\n",
+      "(4, 3)\n",
+      "(4, 1)\n",
       "(1, 3)\n",
       "(2, 1)\n",
-      "(2, 1)\n",
-      "(2, 4)\n",
-      "(2, 1)\n",
-      "(2, 1)\n",
-      "(1, 2)\n",
-      "(5, 1)\n",
-      "(2, 1)\n",
-      "(4, 1)\n",
-      "(4, 1)\n",
-      "(2, 1)\n",
+      "(3, 2)\n",
       "(3, 2)\n",
       "(2, 1)\n",
+      "(5, 3)\n",
       "(5, 1)\n",
       "(3, 2)\n",
       "(1, 4)\n",
-      "(1, 5)\n",
+      "(3, 1)\n",
+      "(3, 1)\n",
+      "(3, 1)\n",
       "(1, 2)\n",
-      "(3, 4)\n",
+      "(3, 2)\n",
       "(2, 1)\n",
       "(3, 4)\n",
       "(2, 1)\n",
       "(2, 1)\n",
       "(5, 1)\n",
       "(2, 1)\n",
-      "(1, 4)\n",
+      "(2, 1)\n",
+      "(5, 2)\n",
       "(2, 3)\n",
       "(2, 1)\n",
-      "(3, 2)\n",
       "(3, 1)\n",
       "(3, 1)\n",
       "(1, 2)\n",
-      "(2, 1)\n",
-      "(1, 3)\n",
-      "(3, 1)\n",
-      "(1, 3)\n",
+      "(3, 2)\n",
       "(3, 1)\n",
       "(5, 1)\n",
-      "(2, 1)\n",
-      "(4, 1)\n",
-      "(4, 1)\n",
-      "(3, 1)\n",
-      "(2, 1)\n",
       "(3, 1)\n",
       "(3, 2)\n",
+      "(4, 2)\n",
+      "(2, 3)\n",
+      "(2, 1)\n",
+      "(4, 1)\n",
+      "(4, 1)\n",
+      "(1, 2)\n",
+      "(3, 1)\n",
+      "(2, 1)\n",
+      "(3, 1)\n",
+      "(3, 1)\n",
       "(1, 2)\n",
       "(2, 1)\n",
       "(4, 2)\n",
+      "(1, 2)\n",
       "(4, 1)\n",
+      "(3, 1)\n",
       "(5, 1)\n",
       "(2, 1)\n",
       "(3, 1)\n",
-      "(1, 5)\n",
+      "(1, 2)\n",
       "(3, 2)\n",
       "(1, 2)\n",
       "(1, 2)\n",
       "(2, 1)\n",
-      "(3, 1)\n",
+      "(3, 2)\n",
       "(5, 1)\n",
-      "(3, 4)\n",
       "(3, 2)\n",
-      "(3, 1)\n",
-      "(2, 5)\n",
-      "(2, 1)\n",
-      "(1, 2)\n",
-      "(4, 2)\n",
-      "(2, 1)\n",
-      "(2, 1)\n",
-      "(2, 1)\n",
-      "(3, 1)\n",
       "(3, 2)\n",
       "(3, 1)\n",
       "(2, 1)\n",
-      "(3, 1)\n",
       "(1, 3)\n",
-      "(2, 1)\n",
-      "(2, 1)\n",
       "(1, 2)\n",
+      "(4, 1)\n",
+      "(2, 1)\n",
+      "(2, 1)\n",
+      "(2, 1)\n",
+      "(2, 1)\n",
+      "(3, 1)\n",
+      "(3, 1)\n",
+      "(3, 1)\n",
+      "(2, 1)\n",
+      "(3, 1)\n",
+      "(2, 1)\n",
+      "(2, 1)\n",
       "(2, 1)\n",
       "(3, 2)\n",
       "(4, 1)\n",
+      "(5, 2)\n",
+      "(3, 1)\n",
       "(3, 2)\n",
       "(1, 3)\n",
-      "(3, 4)\n"
+      "(3, 2)\n"
      ]
     }
    ],
