--- a/forest_top_10_feature.ipynb
+++ b/forest_top_10_feature.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,154 +242,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Sex', 'Age', 'Narrow pitch range', 'Decreased volume', 'Fatigue', 'Dryness', 'Lumping', 'heartburn', 'Choking', 'Eye dryness', 'PND', 'Smoking', 'PPD', 'Drinking', 'frequency', 'Noise at work', 'Occupational vocal demand', 'Voice handicap index - 10']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "columns_to_drop = ['ID', 'Disease category', 'Diabetes', 'Hypertension', 'CAD', 'Head and Neck Cancer', 'Head injury', 'CVA', 'Onset of dysphonia ', 'Diurnal pattern']\n",
-    "# get certain columns as features\n",
-    "features = df.columns.drop(columns_to_drop).to_list()\n",
-    "print(features)"
+    "top_10_features = ['Age', 'Voice handicap index - 10', 'Onset of dysphonia ', 'Occupational vocal demand', 'Noise at work', 'Diurnal pattern', 'Choking', 'Sex', 'Smoking', 'Decreased volume']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "# X = df.drop(['ID', 'Disease category'], axis=1)\n",
-    "X = df[features]\n",
+    "X = df[top_10_features]\n",
     "y = df['Disease category']\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=101)\n",
-    "\n",
-    "scaler = StandardScaler().fit(X_train.values)\n",
-    "X_train_norm = scaler.transform(X_train.values)\n",
-    "X_test_norm = scaler.transform(X_test.values)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=101)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
-    "lr_model = LogisticRegression(multi_class=\"multinomial\", solver='lbfgs')\n",
-    "lr_model.fit(X_train_norm, y_train.values)\n",
+    "forest = RandomForestClassifier(n_estimators=100)\n",
+    "forest.fit(X_train.values, y_train.values)\n",
     "\n",
-    "y_pred = lr_model.predict(X_test_norm)"
+    "y_pred = forest.predict(X_test.values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2, 1, 2, 1, 1, 2, 3, 1, 4, 1, 2, 2, 1, 2, 3, 3, 2, 1, 3, 5, 1, 1,\n",
-       "       1, 3, 3, 1, 2, 1, 2, 2, 1, 1, 1, 1, 3, 1, 1, 1, 1, 1, 1, 1, 2, 3,\n",
-       "       3, 1, 1, 1, 3, 4, 3, 3, 2, 1, 3, 2, 1, 1, 2, 1, 2, 1, 1, 2, 3, 1,\n",
-       "       1, 1, 1, 2, 1, 2, 2, 1, 1, 3, 2, 3, 1, 1, 3, 2, 2, 2, 3, 3, 1, 1,\n",
-       "       1, 5, 2, 1, 5, 4, 1, 1, 1, 4, 1, 1, 1, 1, 1, 1, 1, 2, 1, 1, 1, 3,\n",
-       "       1, 2, 3, 3, 1, 2, 2, 5, 5, 1, 1, 3, 1, 3, 1, 3, 3, 1, 1, 3, 3, 1,\n",
-       "       3, 2, 1, 1, 3, 1, 1, 1, 1, 2, 2, 1, 1, 5, 1, 2, 1, 1, 2, 1, 1, 1,\n",
-       "       5, 1, 2, 1, 2, 1, 3, 3, 3, 1, 1, 1, 2, 1, 1, 2, 1, 2, 1, 3, 1, 3,\n",
-       "       1, 5, 1, 3, 1, 1, 3, 3, 4, 1, 2, 1, 2, 1, 1, 1, 2, 4, 4, 2, 1, 1,\n",
-       "       3, 2, 3, 1, 1, 1, 3, 1, 1, 2, 1, 4, 1, 1, 1, 1, 1, 3, 1, 1, 1, 1,\n",
-       "       1, 4, 1, 1, 3, 2, 5, 2, 1, 2, 1, 2, 3, 1, 1, 3, 2, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 2, 3, 3, 5, 3, 1, 2, 3, 3, 2, 2, 1, 1, 2, 1, 4, 2, 1, 2, 2,\n",
-       "       2, 3, 3, 3, 1, 1, 1, 2, 3, 1, 2, 2, 1, 2, 1, 1, 2, 1, 1, 3, 1, 4,\n",
-       "       1, 2, 5, 1, 1, 1, 3, 1, 3, 1, 3, 3])"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_test.values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2, 1, 1, 1, 1, 1, 2, 1, 4, 1, 1, 3, 1, 2, 3, 2, 2, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 2, 1, 2, 1, 1, 2, 1, 1, 1, 1, 2, 1, 2, 1, 1, 2, 1, 2, 2, 3,\n",
-       "       3, 1, 1, 1, 3, 2, 2, 3, 2, 1, 1, 3, 1, 1, 1, 1, 1, 3, 1, 1, 3, 1,\n",
-       "       1, 1, 1, 1, 1, 4, 1, 1, 1, 3, 2, 3, 1, 1, 3, 2, 2, 1, 3, 3, 1, 2,\n",
-       "       1, 1, 1, 1, 5, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2,\n",
-       "       1, 2, 3, 3, 1, 2, 1, 5, 1, 1, 1, 2, 4, 3, 1, 3, 3, 1, 5, 3, 3, 2,\n",
-       "       4, 1, 1, 1, 4, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 1, 1, 1, 4, 1, 1,\n",
-       "       5, 1, 3, 1, 1, 1, 2, 1, 1, 1, 1, 2, 2, 1, 1, 1, 3, 2, 1, 1, 3, 1,\n",
-       "       1, 1, 1, 3, 1, 1, 3, 3, 4, 1, 2, 1, 2, 1, 1, 1, 1, 1, 1, 2, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 2, 2, 1, 1, 1, 2, 1, 1, 1, 1, 1, 3, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 3, 2, 1, 2, 1, 2, 1, 1, 1, 5, 1, 2, 2, 2, 1, 1, 1, 1,\n",
-       "       2, 1, 1, 1, 3, 1, 4, 1, 2, 2, 1, 5, 1, 1, 1, 2, 2, 2, 1, 1, 1, 2,\n",
-       "       1, 1, 2, 1, 1, 1, 1, 1, 1, 3, 1, 1, 1, 2, 2, 1, 1, 1, 1, 2, 1, 1,\n",
-       "       1, 2, 5, 1, 1, 1, 3, 1, 2, 3, 4, 3])"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_pred"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.64\n",
-      "Precision: 0.64\n",
-      "Recall: 0.64\n",
-      "F1: 0.63\n",
+      "Accuracy: 0.63\n",
+      "Precision: 0.6\n",
+      "Recall: 0.63\n",
+      "F1: 0.6\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           1       0.69      0.87      0.77       153\n",
-      "           2       0.49      0.42      0.45        64\n",
-      "           3       0.76      0.44      0.56        59\n",
-      "           4       0.22      0.18      0.20        11\n",
-      "           5       0.57      0.36      0.44        11\n",
+      "           1       0.67      0.87      0.76       153\n",
+      "           2       0.48      0.41      0.44        64\n",
+      "           3       0.66      0.46      0.54        59\n",
+      "           4       0.00      0.00      0.00        11\n",
+      "           5       0.50      0.09      0.15        11\n",
       "\n",
-      "    accuracy                           0.64       298\n",
-      "   macro avg       0.55      0.46      0.49       298\n",
-      "weighted avg       0.64      0.64      0.63       298\n",
+      "    accuracy                           0.63       298\n",
+      "   macro avg       0.46      0.36      0.38       298\n",
+      "weighted avg       0.60      0.63      0.60       298\n",
       "\n",
-      "[[133  11   5   2   2]\n",
-      " [ 32  27   3   1   1]\n",
-      " [ 15  14  26   4   0]\n",
-      " [  6   3   0   2   0]\n",
-      " [  7   0   0   0   4]]\n"
+      "[[133  10   8   2   0]\n",
+      " [ 31  26   6   0   1]\n",
+      " [ 18  14  27   0   0]\n",
+      " [  8   3   0   0   0]\n",
+      " [  9   1   0   0   1]]\n"
      ]
     }
    ],
@@ -398,7 +315,7 @@
     "\n",
     "accuracy = accuracy_score(y_test.values, y_pred)\n",
     "precision = precision_score(y_test.values, y_pred, average='weighted', zero_division=1)\n",
-    "recall = recall_score(y_test.values, y_pred, average='weighted', zero_division=1)\n",
+    "recall = recall_score(y_test.values, y_pred, average='unweighted', zero_division=1)\n",
     "f1 = f1_score(y_test.values, y_pred, average='weighted', zero_division=1)\n",
     "\n",
     "print(f\"Accuracy: {accuracy.round(2)}\")\n",
@@ -412,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -420,112 +337,117 @@
      "output_type": "stream",
      "text": [
       "(test, pred)\n",
-      "(2, 1)\n",
-      "(2, 1)\n",
-      "(3, 2)\n",
-      "(2, 1)\n",
-      "(2, 3)\n",
-      "(3, 2)\n",
-      "(3, 1)\n",
-      "(5, 1)\n",
-      "(3, 1)\n",
-      "(3, 2)\n",
-      "(2, 1)\n",
-      "(3, 2)\n",
-      "(1, 2)\n",
-      "(1, 2)\n",
-      "(1, 2)\n",
-      "(4, 2)\n",
-      "(3, 2)\n",
-      "(3, 1)\n",
       "(2, 3)\n",
       "(2, 1)\n",
       "(2, 1)\n",
-      "(1, 3)\n",
-      "(2, 1)\n",
-      "(2, 1)\n",
-      "(2, 4)\n",
-      "(2, 1)\n",
-      "(2, 1)\n",
-      "(1, 2)\n",
-      "(5, 1)\n",
-      "(2, 1)\n",
-      "(4, 1)\n",
+      "(3, 1)\n",
       "(4, 1)\n",
       "(2, 1)\n",
+      "(2, 3)\n",
       "(3, 2)\n",
       "(2, 1)\n",
+      "(3, 1)\n",
       "(5, 1)\n",
-      "(3, 2)\n",
-      "(1, 4)\n",
-      "(1, 5)\n",
-      "(1, 2)\n",
-      "(3, 4)\n",
-      "(2, 1)\n",
-      "(3, 4)\n",
-      "(2, 1)\n",
-      "(2, 1)\n",
-      "(5, 1)\n",
+      "(3, 1)\n",
       "(2, 1)\n",
       "(1, 4)\n",
+      "(1, 2)\n",
+      "(1, 2)\n",
+      "(3, 1)\n",
+      "(4, 1)\n",
+      "(3, 2)\n",
+      "(1, 2)\n",
+      "(3, 1)\n",
       "(2, 3)\n",
       "(2, 1)\n",
-      "(3, 2)\n",
-      "(3, 1)\n",
-      "(3, 1)\n",
-      "(1, 2)\n",
-      "(2, 1)\n",
       "(1, 3)\n",
+      "(2, 1)\n",
+      "(2, 1)\n",
+      "(2, 1)\n",
+      "(3, 2)\n",
+      "(1, 2)\n",
+      "(2, 1)\n",
+      "(2, 1)\n",
+      "(3, 2)\n",
+      "(1, 2)\n",
+      "(1, 2)\n",
+      "(5, 1)\n",
+      "(2, 1)\n",
+      "(5, 1)\n",
+      "(4, 1)\n",
+      "(4, 1)\n",
+      "(1, 3)\n",
+      "(2, 1)\n",
+      "(3, 2)\n",
+      "(3, 1)\n",
+      "(2, 1)\n",
+      "(5, 2)\n",
+      "(5, 1)\n",
+      "(3, 2)\n",
+      "(3, 1)\n",
+      "(3, 2)\n",
+      "(1, 3)\n",
+      "(2, 1)\n",
+      "(3, 1)\n",
+      "(2, 1)\n",
+      "(5, 1)\n",
+      "(2, 1)\n",
+      "(2, 1)\n",
+      "(3, 2)\n",
+      "(3, 1)\n",
       "(3, 1)\n",
       "(1, 3)\n",
-      "(3, 1)\n",
-      "(5, 1)\n",
       "(2, 1)\n",
-      "(4, 1)\n",
-      "(4, 1)\n",
-      "(3, 1)\n",
-      "(2, 1)\n",
-      "(3, 1)\n",
-      "(3, 2)\n",
-      "(1, 2)\n",
-      "(2, 1)\n",
-      "(4, 2)\n",
-      "(4, 1)\n",
-      "(5, 1)\n",
-      "(2, 1)\n",
-      "(3, 1)\n",
-      "(1, 5)\n",
-      "(3, 2)\n",
-      "(1, 2)\n",
-      "(1, 2)\n",
-      "(2, 1)\n",
-      "(3, 1)\n",
-      "(5, 1)\n",
-      "(3, 4)\n",
-      "(3, 2)\n",
-      "(3, 1)\n",
       "(2, 5)\n",
-      "(2, 1)\n",
-      "(1, 2)\n",
+      "(3, 2)\n",
+      "(5, 1)\n",
+      "(1, 3)\n",
+      "(3, 1)\n",
       "(4, 2)\n",
+      "(2, 3)\n",
+      "(1, 2)\n",
       "(2, 1)\n",
+      "(4, 1)\n",
+      "(4, 2)\n",
+      "(3, 1)\n",
+      "(3, 2)\n",
+      "(1, 2)\n",
       "(2, 1)\n",
+      "(4, 2)\n",
+      "(1, 4)\n",
+      "(1, 3)\n",
+      "(4, 1)\n",
+      "(5, 1)\n",
       "(2, 1)\n",
       "(3, 1)\n",
+      "(1, 2)\n",
+      "(3, 2)\n",
+      "(2, 1)\n",
+      "(3, 1)\n",
+      "(5, 1)\n",
+      "(3, 2)\n",
       "(3, 2)\n",
       "(3, 1)\n",
       "(2, 1)\n",
-      "(3, 1)\n",
-      "(1, 3)\n",
-      "(2, 1)\n",
-      "(2, 1)\n",
       "(1, 2)\n",
+      "(4, 1)\n",
+      "(2, 1)\n",
+      "(2, 1)\n",
+      "(2, 1)\n",
+      "(3, 1)\n",
+      "(3, 1)\n",
+      "(2, 1)\n",
+      "(3, 1)\n",
+      "(2, 1)\n",
+      "(2, 1)\n",
+      "(2, 3)\n",
+      "(1, 3)\n",
       "(2, 1)\n",
       "(3, 2)\n",
       "(4, 1)\n",
-      "(3, 2)\n",
-      "(1, 3)\n",
-      "(3, 4)\n"
+      "(2, 3)\n",
+      "(5, 1)\n",
+      "(1, 3)\n"
      ]
     }
    ],
@@ -535,6 +457,53 @@
     "for i in range(len(y_test)):\n",
     "    if y_test.values[i] != y_pred[i]:\n",
     "        print((y_test.values[i], y_pred[i]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'random_forest_tree_full_data.pdf'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# plot tree\n",
+    "from sklearn import tree\n",
+    "import graphviz\n",
+    "\n",
+    "# Select an individual decision tree from the Random Forest\n",
+    "selected_tree = forest.estimators_[0]\n",
+    "\n",
+    "# Calculate the deppth of the selected decision tree\n",
+    "depth = selected_tree.get_depth()\n",
+    "print(depth)\n",
+    "\n",
+    "# Plot the selected decision tree\n",
+    "dot_data = tree.export_graphviz(selected_tree, out_file=None,\n",
+    "                                feature_names=X_train.columns,\n",
+    "                                class_names=y_train.unique().astype(str),\n",
+    "                                filled=True, rounded=True,\n",
+    "                                special_characters=True)\n",
+    "\n",
+    "graph = graphviz.Source(dot_data)\n",
+    "graph.render(\"random_forest_tree_full_data\")  # Save the tree visualization as a file\n",
+    "graph.view()  # Display the tree visualization"
    ]
   }
  ],
