--- a/svm_top_10_feature.ipynb
+++ b/svm_top_10_feature.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,35 +242,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Sex', 'Age', 'Narrow pitch range', 'Decreased volume', 'Fatigue', 'Dryness', 'Lumping', 'heartburn', 'Choking', 'Eye dryness', 'PND', 'Smoking', 'PPD', 'Drinking', 'frequency', 'Noise at work', 'Occupational vocal demand', 'Voice handicap index - 10']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "columns_to_drop = ['ID', 'Disease category', 'Diabetes', 'Hypertension', 'CAD', 'Head and Neck Cancer', 'Head injury', 'CVA', 'Onset of dysphonia ', 'Diurnal pattern']\n",
-    "# get certain columns as features\n",
-    "features = df.columns.drop(columns_to_drop).to_list()\n",
-    "print(features)"
+    "top_10_features = ['Age', 'Voice handicap index - 10', 'Diurnal pattern', 'Onset of dysphonia ', 'Occupational vocal demand', 'Sex', 'Noise at work', 'Drinking', 'Fatigue', 'Smoking']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "# X = df.drop(['ID', 'Disease category'], axis=1)\n",
-    "X = df[features]\n",
+    "X = df[top_10_features]\n",
     "y = df['Disease category']\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=101)\n",
@@ -282,114 +270,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.svm import SVC\n",
     "\n",
-    "lr_model = LogisticRegression(multi_class=\"multinomial\", solver='lbfgs')\n",
-    "lr_model.fit(X_train_norm, y_train.values)\n",
+    "svc_model = SVC()\n",
+    "svc_model.fit(X_train_norm, y_train.values)\n",
     "\n",
-    "y_pred = lr_model.predict(X_test_norm)"
+    "y_pred = svc_model.predict(X_test_norm)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2, 1, 2, 1, 1, 2, 3, 1, 4, 1, 2, 2, 1, 2, 3, 3, 2, 1, 3, 5, 1, 1,\n",
-       "       1, 3, 3, 1, 2, 1, 2, 2, 1, 1, 1, 1, 3, 1, 1, 1, 1, 1, 1, 1, 2, 3,\n",
-       "       3, 1, 1, 1, 3, 4, 3, 3, 2, 1, 3, 2, 1, 1, 2, 1, 2, 1, 1, 2, 3, 1,\n",
-       "       1, 1, 1, 2, 1, 2, 2, 1, 1, 3, 2, 3, 1, 1, 3, 2, 2, 2, 3, 3, 1, 1,\n",
-       "       1, 5, 2, 1, 5, 4, 1, 1, 1, 4, 1, 1, 1, 1, 1, 1, 1, 2, 1, 1, 1, 3,\n",
-       "       1, 2, 3, 3, 1, 2, 2, 5, 5, 1, 1, 3, 1, 3, 1, 3, 3, 1, 1, 3, 3, 1,\n",
-       "       3, 2, 1, 1, 3, 1, 1, 1, 1, 2, 2, 1, 1, 5, 1, 2, 1, 1, 2, 1, 1, 1,\n",
-       "       5, 1, 2, 1, 2, 1, 3, 3, 3, 1, 1, 1, 2, 1, 1, 2, 1, 2, 1, 3, 1, 3,\n",
-       "       1, 5, 1, 3, 1, 1, 3, 3, 4, 1, 2, 1, 2, 1, 1, 1, 2, 4, 4, 2, 1, 1,\n",
-       "       3, 2, 3, 1, 1, 1, 3, 1, 1, 2, 1, 4, 1, 1, 1, 1, 1, 3, 1, 1, 1, 1,\n",
-       "       1, 4, 1, 1, 3, 2, 5, 2, 1, 2, 1, 2, 3, 1, 1, 3, 2, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 2, 3, 3, 5, 3, 1, 2, 3, 3, 2, 2, 1, 1, 2, 1, 4, 2, 1, 2, 2,\n",
-       "       2, 3, 3, 3, 1, 1, 1, 2, 3, 1, 2, 2, 1, 2, 1, 1, 2, 1, 1, 3, 1, 4,\n",
-       "       1, 2, 5, 1, 1, 1, 3, 1, 3, 1, 3, 3])"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_test.values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2, 1, 1, 1, 1, 1, 2, 1, 4, 1, 1, 3, 1, 2, 3, 2, 2, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 2, 1, 2, 1, 1, 2, 1, 1, 1, 1, 2, 1, 2, 1, 1, 2, 1, 2, 2, 3,\n",
-       "       3, 1, 1, 1, 3, 2, 2, 3, 2, 1, 1, 3, 1, 1, 1, 1, 1, 3, 1, 1, 3, 1,\n",
-       "       1, 1, 1, 1, 1, 4, 1, 1, 1, 3, 2, 3, 1, 1, 3, 2, 2, 1, 3, 3, 1, 2,\n",
-       "       1, 1, 1, 1, 5, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2,\n",
-       "       1, 2, 3, 3, 1, 2, 1, 5, 1, 1, 1, 2, 4, 3, 1, 3, 3, 1, 5, 3, 3, 2,\n",
-       "       4, 1, 1, 1, 4, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 1, 1, 1, 4, 1, 1,\n",
-       "       5, 1, 3, 1, 1, 1, 2, 1, 1, 1, 1, 2, 2, 1, 1, 1, 3, 2, 1, 1, 3, 1,\n",
-       "       1, 1, 1, 3, 1, 1, 3, 3, 4, 1, 2, 1, 2, 1, 1, 1, 1, 1, 1, 2, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 2, 2, 1, 1, 1, 2, 1, 1, 1, 1, 1, 3, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 3, 2, 1, 2, 1, 2, 1, 1, 1, 5, 1, 2, 2, 2, 1, 1, 1, 1,\n",
-       "       2, 1, 1, 1, 3, 1, 4, 1, 2, 2, 1, 5, 1, 1, 1, 2, 2, 2, 1, 1, 1, 2,\n",
-       "       1, 1, 2, 1, 1, 1, 1, 1, 1, 3, 1, 1, 1, 2, 2, 1, 1, 1, 1, 2, 1, 1,\n",
-       "       1, 2, 5, 1, 1, 1, 3, 1, 2, 3, 4, 3])"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_pred"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.64\n",
-      "Precision: 0.64\n",
-      "Recall: 0.64\n",
-      "F1: 0.63\n",
+      "Accuracy: 0.67\n",
+      "Precision: 0.69\n",
+      "Recall: 0.67\n",
+      "F1: 0.62\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           1       0.69      0.87      0.77       153\n",
-      "           2       0.49      0.42      0.45        64\n",
-      "           3       0.76      0.44      0.56        59\n",
-      "           4       0.22      0.18      0.20        11\n",
-      "           5       0.57      0.36      0.44        11\n",
+      "           1       0.67      0.93      0.78       153\n",
+      "           2       0.56      0.38      0.45        64\n",
+      "           3       0.77      0.56      0.65        59\n",
+      "           4       1.00      0.00      0.00        11\n",
+      "           5       1.00      0.00      0.00        11\n",
       "\n",
-      "    accuracy                           0.64       298\n",
-      "   macro avg       0.55      0.46      0.49       298\n",
-      "weighted avg       0.64      0.64      0.63       298\n",
+      "    accuracy                           0.67       298\n",
+      "   macro avg       0.80      0.37      0.37       298\n",
+      "weighted avg       0.69      0.67      0.62       298\n",
       "\n",
-      "[[133  11   5   2   2]\n",
-      " [ 32  27   3   1   1]\n",
-      " [ 15  14  26   4   0]\n",
-      " [  6   3   0   2   0]\n",
-      " [  7   0   0   0   4]]\n"
+      "[[142   7   4   0   0]\n",
+      " [ 34  24   6   0   0]\n",
+      " [ 19   7  33   0   0]\n",
+      " [  7   4   0   0   0]\n",
+      " [ 10   1   0   0   0]]\n"
      ]
     }
    ],
@@ -408,133 +330,6 @@
     "\n",
     "print(classification_report(y_test.values, y_pred, zero_division=1))\n",
     "print(confusion_matrix(y_test.values, y_pred))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(test, pred)\n",
-      "(2, 1)\n",
-      "(2, 1)\n",
-      "(3, 2)\n",
-      "(2, 1)\n",
-      "(2, 3)\n",
-      "(3, 2)\n",
-      "(3, 1)\n",
-      "(5, 1)\n",
-      "(3, 1)\n",
-      "(3, 2)\n",
-      "(2, 1)\n",
-      "(3, 2)\n",
-      "(1, 2)\n",
-      "(1, 2)\n",
-      "(1, 2)\n",
-      "(4, 2)\n",
-      "(3, 2)\n",
-      "(3, 1)\n",
-      "(2, 3)\n",
-      "(2, 1)\n",
-      "(2, 1)\n",
-      "(1, 3)\n",
-      "(2, 1)\n",
-      "(2, 1)\n",
-      "(2, 4)\n",
-      "(2, 1)\n",
-      "(2, 1)\n",
-      "(1, 2)\n",
-      "(5, 1)\n",
-      "(2, 1)\n",
-      "(4, 1)\n",
-      "(4, 1)\n",
-      "(2, 1)\n",
-      "(3, 2)\n",
-      "(2, 1)\n",
-      "(5, 1)\n",
-      "(3, 2)\n",
-      "(1, 4)\n",
-      "(1, 5)\n",
-      "(1, 2)\n",
-      "(3, 4)\n",
-      "(2, 1)\n",
-      "(3, 4)\n",
-      "(2, 1)\n",
-      "(2, 1)\n",
-      "(5, 1)\n",
-      "(2, 1)\n",
-      "(1, 4)\n",
-      "(2, 3)\n",
-      "(2, 1)\n",
-      "(3, 2)\n",
-      "(3, 1)\n",
-      "(3, 1)\n",
-      "(1, 2)\n",
-      "(2, 1)\n",
-      "(1, 3)\n",
-      "(3, 1)\n",
-      "(1, 3)\n",
-      "(3, 1)\n",
-      "(5, 1)\n",
-      "(2, 1)\n",
-      "(4, 1)\n",
-      "(4, 1)\n",
-      "(3, 1)\n",
-      "(2, 1)\n",
-      "(3, 1)\n",
-      "(3, 2)\n",
-      "(1, 2)\n",
-      "(2, 1)\n",
-      "(4, 2)\n",
-      "(4, 1)\n",
-      "(5, 1)\n",
-      "(2, 1)\n",
-      "(3, 1)\n",
-      "(1, 5)\n",
-      "(3, 2)\n",
-      "(1, 2)\n",
-      "(1, 2)\n",
-      "(2, 1)\n",
-      "(3, 1)\n",
-      "(5, 1)\n",
-      "(3, 4)\n",
-      "(3, 2)\n",
-      "(3, 1)\n",
-      "(2, 5)\n",
-      "(2, 1)\n",
-      "(1, 2)\n",
-      "(4, 2)\n",
-      "(2, 1)\n",
-      "(2, 1)\n",
-      "(2, 1)\n",
-      "(3, 1)\n",
-      "(3, 2)\n",
-      "(3, 1)\n",
-      "(2, 1)\n",
-      "(3, 1)\n",
-      "(1, 3)\n",
-      "(2, 1)\n",
-      "(2, 1)\n",
-      "(1, 2)\n",
-      "(2, 1)\n",
-      "(3, 2)\n",
-      "(4, 1)\n",
-      "(3, 2)\n",
-      "(1, 3)\n",
-      "(3, 4)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# print the error position\n",
-    "print(\"(test, pred)\")\n",
-    "for i in range(len(y_test)):\n",
-    "    if y_test.values[i] != y_pred[i]:\n",
-    "        print((y_test.values[i], y_pred[i]))"
    ]
   }
  ],
